# fastapi-template

./: .gitignore  AI_CODING_INSTRUCTIONS.md  README.md  RELEASE_NOTES.md  docker-compose.yml  pyproject.toml
app/activity/: __init__.py  crud.py  enums.py  logger.py  models.py  routes.py  schemas.py  service.py  tasks.py
app/apis/: v1.py
app/core/: alembic_models_import.py  crud.py  main.py  metrics.py  middleware.py  settings.py  utils.py
app/core/background/: celery_app.py
app/core/cache/: README.md  __init__.py  cache.py  examples.py
app/core/object_storage/: __init__.py  exceptions.py  storage.py  utils.py
app/release_notes/: __init__.py  crud.py  models.py  routes.py  schemas.py  service.py
app/user/: __init__.py  create_admin.py  exceptions.py  models.py  seed.py
app/user/auth_management/: __init__.py  routes.py  service.py  utils.py
app/user/crud/: __init__.py  permission_crud.py  refresh_token_crud.py  role_crud.py  user_crud.py
app/user/permission_management/: __init__.py  scoped_access.py  utils.py
app/user/routes/: __init__.py  admin_routes.py  user_routes.py
deploy-v2/: .gitignore  DOCS_AUTH.md  QUICK_START.md  README.md  get-into-staging-container.sh
deploy-v2/scripts/: deploy.sh  setup.sh  ssl.sh  validate.sh
docker/: celery-worker-entrypoint.sh  docker-entrypoint.sh  flower-entrypoint.sh
docs/: PROJECT_CONVENTIONS.md
migrations/versions/: 2026_02_09_0657-8600ba4ec5f7_user_init_models.py  2026_02_21_0655-35fb6f4f87c1_new_activity_log_module.py  2026_02_25_0706-18da0849f81f_add_release_notes_table.py
(+21 files in other folders)
